All id's removed header alignment corrected

--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -25,7 +25,7 @@ header {
     margin-bottom: 20px;
 }
 
-header div {
+header div.name {
     width: 680px;
     text-align: right;
 }
@@ -42,7 +42,7 @@ h2 {
     color: lightgray
 }
 
-#logo {
+.logo {
     height: 120px;
 }
 
